# django-react-template

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  manage.py  pyproject.toml  setup.cfg
backend/app/: asgi.py  constants.py  settings.py  urls.py  worker.py  wsgi.py
backend/app/authentication/: apps.py  urls.py
backend/app/authentication/controllers/: __init__.py  authentication.py
backend/app/authentication/dto/: __init__.py  user.py
backend/app/authentication/migrations/: 0001_initial.py
backend/app/authentication/models/: user.py
backend/app/authentication/serializers/: __init__.py  sign_in.py  sign_up.py
backend/app/authentication/views/: __init__.py  sign_in.py  sign_out.py  sign_up.py  who_am_i.py
backend/app/common/: urls.py
backend/app/common/dto/: __init__.py  base.py
backend/app/common/integrations/s3/: client.py  exceptions.py
backend/app/common/middleware/: __init__.py  logging.py  request_id.py
backend/app/common/models/: __init__.py  base.py
backend/app/common/permissions/: __init__.py  reject_all.py
backend/app/common/views/: __init__.py  csrf.py
backend/core/: apps.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  customer.py  organization.py
backend/django_react_template/: apps.py  asgi.py  authentication.py  celery.py  constants.py  settings.py  types.py  urls.py  wsgi.py
backend/django_react_template/management/commands/: seed_database.py
backend/django_react_template/models/: __init__.py  base.py
backend/django_react_template/tests/unit/models/: test_base_model.py
backend/sh/: api-dev.sh  api.sh  create-bucket.sh  hot-reload.sh  worker-dev.sh  worker-scheduler-dev.sh  worker-scheduler.sh  worker.sh
backend/tests/: __init__.py  e2e.py  integration.py  unit.py
frontend/: .dockerignore  .env.sample  .eslintrc.cjs  .gitignore  Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: app.tsx  environment.ts  main.tsx  router.tsx
frontend/src/api/: authentication.ts  axios.ts  client.ts  csrf.ts
frontend/src/api/clients/: customer.ts  organization.ts
frontend/src/api/types/: base.ts  customer.ts  index.ts  organization.ts  pagination.ts
frontend/src/components/: NavBar.tsx  SEOHelmet.tsx
frontend/src/components/containers/: theme-toggle.tsx
frontend/src/components/containers/navigation/: menu-bar.tsx  navigation-bar.tsx  organization-switcher.tsx  user-menu.tsx
frontend/src/components/hooks/: axios.ts
frontend/src/components/layouts/: authenticated.tsx  error.tsx  unauthenticated.tsx
frontend/src/components/pages/: home.tsx  logout.tsx  not-found.tsx  profile.tsx
frontend/src/components/providers/: auth0.tsx  theme.tsx
frontend/src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  loader.tsx
frontend/src/contexts/: authentication.tsx
frontend/src/layouts/: AuthenticatedLayout.tsx  ErrorLayout.tsx  UnauthenticatedLayout.tsx  authenticated.tsx  unauthenticated.tsx
frontend/src/lib/: i18n.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/es/: translation.json
frontend/src/locales/pt/: translation.json
frontend/src/pages/: NotFound.tsx  SignIn.tsx  SignOut.tsx  SignUp.tsx
frontend/src/theme/: GlobalStyles.tsx  customShadows.ts  index.tsx  shadows.ts  typography.ts
