# ======
# Poetry
# ======
[tool.poetry]
name = "DjangoReactTemplate"
description = "DjangoReactTemplate"
version = "1.0.0"
authors = ["Luis Vieira <lvieira@lvieira.com>"]

[tool.poetry.dependencies]
python = "~3.12.0"
celery = {version = "^5.3.6", extras = ["gevent", "redis"]}
django = {version = "^5.0.2"}
django-cors-headers = {version = "^4.3.1"}
django-extensions = {version = "^3.2.3"}
django-redis = {version = "^5.4.0", extras=["hiredis"]}
djangorestframework = {version = "^3.14.0"}
ipython = {version = "^8.22.1"}
gevent = {version = "^24.2.1"}
psycopg = {version = "^3.1.18", extras = ["c", "pool"]}
python-dotenv = {version = "1.0.1"}
redis = {version = "^5.0.1", extras = ["hiredis"]}
structlog = {version = "^24.1.0"}
uwsgi = {version = "^2.0.24"}

[tool.poetry.dev-dependencies]
django-stubs = {version = "^4.2", extras = ["compatible-mypy"]}
djangorestframework-stubs = {version = "^3.14", extras = ["compatible-mypy"]}
factory-boy = {version = "^3.3"}
ipdb = {version = "^0.13"}
mock = {version = "^5.1"}
mypy = {version = "^1.7"}
pytest = {version = "^8.0"}
pytest-cov = {version = "^4.1"}
pytest-django = {version = "^4.8"}
pytest-mock = {version = "^3.12"}
ruff = {version = "^0.2"}
safety = {version = "^3.0"}
watchdog = {version = "^4.0"}


# ======
# PyTest
# ======
[tool.pytest.ini_options]
addopts = "-s -vv"
mock_use_standalone_module = true


# ====
# MyPy
# ====
[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "app.settings"


# ====
# Ruff
# ====
[tool.ruff]
target-version = "py312"
ignore = ["COM812", "ISC001"]
select = ["B", "C4", "C90", "COM", "E", "EXE", "F", "I", "ISC", "N", "S", "T10", "T20", "W"]
