# ======
# Poetry
# ======
[tool.poetry]
name = "DjangoReactTemplate"
description = "Django React Template"
version = "1.0.0"
authors = ["Luis Vieira <lvieira@lvieira.com>"]

[tool.poetry.dependencies]
python = "~3.12.0"
celery = {version = "^5.3.6", extras = ["gevent", "redis"]}
django = {version = "^5.0.3"}
django-cors-headers = {version = "^4.3.1"}
django-environ = {version = "^0.11.2"}
django-extensions = {version = "^3.2.3"}
django-health-check = {version = "^3.18.1"}
django-permissions-policy = {version = "^4.19.0"}
django-redis = {version = "^5.4.0", extras=["hiredis"]}
django-structlog = {version = "^7.1.0", extras=["celery", "commands"]}
djangorestframework = {version = "^3.14.0"}
ipython = {version = "^8.22.1"}
psycopg = {version = "^3.1.18", extras = ["c", "pool"]}
sentry-sdk = {version = "^1.41.0", extras = ["celery", "django"]}
uwsgi = {version = "^2.0.24"}
whitenoise = {version = "6.6.0", extras = ["brotli"]}

[tool.poetry.dev-dependencies]
django-stubs = {version = "^4.2", extras = ["compatible-mypy"]}
djangorestframework-stubs = {version = "^3.14", extras = ["compatible-mypy"]}
factory-boy = {version = "^3.3"}
ipdb = {version = "^0.13"}
mock = {version = "^5.1"}
mypy = {version = "^1.7"}
pytest = {version = "^8.0"}
pytest-django = {version = "^4.8"}
pytest-mock = {version = "^3.12"}
ruff = {version = "^0.3"}
safety = {version = "^3.0"}
watchdog = {version = "^4.0"}


# ======
# PyTest
# ======
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_react_template.settings"
addopts = "-s -vv"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
mock_use_standalone_module = true


# ====
# MyPy
# ====
[tool.mypy]
exclude = [".*tests/*"]
ignore_missing_imports = true
namespace_packages = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "django_react_template.settings"


# ====
# Ruff
# ====
[tool.ruff]
target-version = "py312"
respect-gitignore = true

[tool.ruff.lint]
ignore = ["COM812", "ISC001"]
select = ["B", "C4", "C90", "COM", "E", "EXE", "F", "I", "ISC", "N", "S", "T10", "T20", "W"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/*" = ["S101"]
